--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>be.nabu.jfx</groupId>
 	<artifactId>jfx-control-tree</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>${be.nabu.jfx-jfx-control-tree-version}</version>
 	<packaging>jar</packaging>
 
 	<name>jfx-control-tree</name>
 	<url>http://maven.apache.org</url>
+
+	<parent>
+		<groupId>be.nabu</groupId>
+		<artifactId>core</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
 	<build>
 		<plugins>
@@ -21,7 +26,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<!-- <dependencies> <dependency> <groupId>com.oracle</groupId> <artifactId>javafx</artifactId> <version>${javafx.version}</version> <scope>system</scope> 
-		<systemPath>${javafx.runtime}/lib/jfxrt.jar</systemPath> </dependency> </dependencies> -->
 </project>
